// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Power (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#00ff00",
        "borderRadius": 0,
        "flex": 1,
        "padding": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderRadius": 0,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 0,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "NaN%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "flex": 2,
              "fontFamily": "px_sans_nouveaux",
              "marginLeft": 4,
            }
          }
        >
          ...
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "flex": 2,
              "fontFamily": "px_sans_nouveaux",
              "marginTop": 1,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginTop": 1,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          >
            /
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Power (with allied/enemy players) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#00ff00",
        "borderRadius": 0,
        "flex": 1,
        "padding": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderRadius": 0,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 0,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "NaN%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "flex": 2,
              "fontFamily": "px_sans_nouveaux",
              "marginLeft": 4,
            }
          }
        >
          ...
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "flex": 2,
              "fontFamily": "px_sans_nouveaux",
              "marginTop": 1,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginTop": 1,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          >
            1
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          >
            /
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          >
            3
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Power (with progress) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#00ff00",
        "borderRadius": 0,
        "flex": 1,
        "padding": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderRadius": 0,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 0,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "50%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "flex": 2,
              "fontFamily": "px_sans_nouveaux",
              "marginLeft": 4,
            }
          }
        >
          ...
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "flex": 2,
              "fontFamily": "px_sans_nouveaux",
              "marginTop": 1,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginTop": 1,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          >
            /
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Power (with progress, timeLeft and allied/enemy players) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#00ff00",
        "borderRadius": 0,
        "flex": 1,
        "padding": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderRadius": 0,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 0,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "50%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "flex": 2,
              "fontFamily": "px_sans_nouveaux",
              "marginLeft": 4,
            }
          }
        >
          ...
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "flex": 2,
              "fontFamily": "px_sans_nouveaux",
              "marginTop": 1,
            }
          }
        >
          00:00:25
        </Text>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginTop": 1,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          >
            1
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          >
            /
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          >
            3
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Power (with timeLeft) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#00ff00",
        "borderRadius": 0,
        "flex": 1,
        "padding": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderRadius": 0,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 0,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "NaN%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "flex": 2,
              "fontFamily": "px_sans_nouveaux",
              "marginLeft": 4,
            }
          }
        >
          ...
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "flex": 2,
              "fontFamily": "px_sans_nouveaux",
              "marginTop": 1,
            }
          }
        >
          00:00:25
        </Text>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginTop": 1,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          >
            /
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#00ff00",
                "fontFamily": "px_sans_nouveaux",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
